# capstone-Project

./: .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHECKPOINTS.md  CONTRIBUTING.md  DELIVERABLES.md  DEPENDENCIES.md  FUTURE_VISION.md  MVP_PREVIEW.md  Makefile  PLAN.md  PROMPT_SEQUENCES.md  README.md  REQUIREMENTS.md  SYSTEM_SETUP.md  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
Md-Files-Documentation/: AGENTS.md  API.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md  SECURITY.md  SPEC.md  TESTING.md  TROUBLESHOOTING.md  WEBSOCKET.md
backend/apps/api/: .campaign_store.json  .env.example  main.py  pyproject.toml  requirements-dev.txt  verify_campaigns.py
backend/apps/api/app/: websocket.py
backend/apps/api/app/core/: config.py  errors.py  logging.py  rate_limit.py  rbac.py  security.py  supabase_client.py
backend/apps/api/app/models/: __init__.py  agent.py  auth.py  campaign.py
backend/apps/api/app/routers/: __init__.py  agents.py  auth.py  campaigns.py  health.py  ws_campaigns.py
backend/apps/api/app/services/: auth_service.py  campaign_service.py
backend/apps/api/tests/: conftest.py  test_api_endpoints.py  test_auth_flow.py  test_auth_service.py  test_database_supabase.py  test_websocket_connection.py  test_websocket_contract.py
docs/: architecture.mmd
e2e/: auth-helpers.ts  campaign-flow.spec.ts  realtime.spec.ts
frontend/apps/web/: next.config.mjs  package.json  vitest.config.ts
frontend/apps/web/.next/: app-build-manifest.json  trace  (+2 more)
(+234 files in other folders)
